--- a/blog/2022-08-30-front_rendering_infra.mdx
+++ b/blog/2022-08-30-front_rendering_infra.mdx
@@ -30,7 +30,7 @@ tags: [frontend, ssr, csr, ssg, cloud infra, frontend framework]
 
 2. 컴포넌트 방식의 UI를 작성하고 싶습니다.
 
-개발자눈 만들고 싶은 것은 제로부터 쌓아올릴 수 있지만, 다른 개발자의 개발물에 덧대어서 쌓을 수 있습니다.
+개발자는 만들고 싶은 것은 제로부터 쌓아올릴 수 있지만, 다른 개발자의 개발물에 덧대어서 쌓을 수 있습니다.
 
 이런 관점에서 본다면 라이브러리와 프레임워크는 비슷하게 보입니다.
 
@@ -108,7 +108,7 @@ SSG는 사용자의 요청이 들어오기 전, html 을 생성해놓습니다.
 
 ## 인프라
 
-가장 배포하기 쉬운 방식은 CSR 과 SSR 입니다.
+가장 배포하기 쉬운 방식은 CSR 과 SSG 입니다.
 
 둘다 정적 파일만을 이용하기 때문에 정적 파일 서버를 통해 배포할 수 있습니다.
 
