Add: higher_order and solid

--- a/blog/2022-08-12-fp_side_effect.mdx
+++ b/blog/2022-08-12-fp_side_effect.mdx
@@ -1,15 +1,19 @@
 ---
 slug: fp_side_effect
-title: 함수형 프로그래밍 - 부수 효과(side effect)
+title: 함수형 프로그래밍 - 부수 효과
 authors: jtree03
-tags: [functional programming, fp, side effect]
+tags: [함수형, 부수 효과, fp, side effect]
 ---
+
+import FPIndex from "./_fp-index.mdx";
 
 함수형 프로그래밍 시리즈를 작성해보려고 합니다.
 
 그 중, 기초적인 부분인 부수 효과에 대해서 알아보겠습니다.
 
 <!--truncate-->
+
+<FPIndex />
 
 ## 부수 효과란?
 
