--- a/blog/2023-01-29-solid.mdx
+++ b/blog/2023-01-29-solid.mdx
@@ -34,8 +34,8 @@ function whatMode(mode: boolean) {
 ```
 
 위와 같이 boolean 값을 받아서 출력하는 간단한 함수가 있습니다.
-이는 **mode** 가 true 일 때와 false 일 때, 결과가 우연히 같게 되어서 만들어지게 되었습니다.
-여기서 만약 **"true 일 때, 앞쪽에 wow를 붙여주세요"** 라는 요구사항이 들어온다면 다음과 같이 변경해야합니다.
+이는 **mode** 가 true 일 때와 false 일 때, 결과가 같기 때문에 하나의 함수로 만들어져있습니다.
+만약 **"true 일 때, 앞쪽에 wow를 붙여주세요"** 라는 요구사항이 들어온다면 다음과 같이 변경해야합니다.
 
 ```typescript
 function whatMode(mode: boolean) {
@@ -47,7 +47,7 @@ function whatMode(mode: boolean) {
 }
 ```
 
-요구 사항은 계속 변할 것입니다.
+요구 사항은 계속 추가될 것입니다.
 true 와 false 는 서로 다른 개체의 요구사항임에도 불구하고 항상 같은 함수를 변경해야합니다.
 이를 단일 책임 원칙으로 변경하면 다음과 같이 만들 수 있습니다.
 
