--- a/blog/2021-12-30-git_tip.mdx
+++ b/blog/2021-12-30-git_tip.mdx
@@ -97,7 +97,7 @@ git checkout <브랜치명>
 git push <원격저장소위치> <브랜치명>
 ```
 
-사진을 아이 클라우드, 구글 포토 등 선택해서 저장할 수 있는 것처럼 <원격저장소위치>를 지정하여 저장할 수 있습니다.
+사진을 아이 클라우드, 구글 포토 등 선택해서 저장할 수 있는 것처럼 \<원격저장소위치\>를 지정하여 저장할 수 있습니다.
 
 ### pull
 
